# MyChat

./: CMakeLists.txt  README.md  autobuild.sh
ChatServer/: CMakeLists.txt
ChatServer/include/: CServer.h  CSession.h  ChatGrpcClient.h  ChatServiceImpl.h  ConfigMgr.h  LogicSystem.h  MsgNode.h  MysqlDao.h  MysqlMgr.h  RedisMgr.h  StatusGrpcClient.h  UserMgr.h  common.h  message.pb.h
ChatServer/src/: CMakeLists.txt  CServer.cpp  CSession.cpp  ChatGrpcClient.cpp  ChatServer.cpp  ChatServiceImpl.cpp  ConfigMgr.cpp  DistLock.cpp  LogicSystem.cpp  MysqlDao.cpp  RedisMgr.cpp  UserMgr.cpp  message.pb.cc  message.proto
GateServer/: CMakeLists.txt
GateServer/include/: ConfigMgr.h  GateServer.h  HttpConnection.h  LogicSystem.h  MysqlDao.h  MysqlMgr.h  RedisMgr.h  StatusGrpcClient.h  VerifyGrpcClient.h  common.h  message.pb.h
GateServer/src/: CMakeLists.txt  ConfigMgr.cpp  GateServer.cpp  HttpConnection.cpp  LogicSystem.cpp  MysqlDao.cpp  RedisMgr.cpp  VerifyGrpcClient.cpp  config.ini  main.cpp  message.pb.cc  message.proto  test
StatusServer/: CMakeLists.txt
StatusServer/include/: ChatGrpcClient.h  DistLock.h  MysqlDao.h  MysqlMgr.h  RedisMgr.h  StatusServiceImpl.h  common.h
StatusServer/src/: CMakeLists.txt  ConfigMgr.cpp  MysqlDao.cpp  RedisMgr.cpp  StatusServer.cpp  StatusServiceImpl.cpp
VerifyServer/: config.js  config.json  package-lock.json  package.json  redis.js  server.js
